--- a/src/AutoStateTransitions/appsettings.json
+++ b/src/AutoStateTransitions/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "PersonalAccessToken": "",
+    "PersonalAccessToken": "qt2vjriysrdwqivqdloqtfj2e4anvp2x7i5h3t5inhao3cgzjo7q",
     "Organization": "",
     "SourceForRules": "https://raw.githubusercontent.com/microsoft/azure-boards-automate-state-transitions/master/src/AutoStateTransitions/Rules"
   }
