--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,5 +46,5 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)/drop/web.zip'
-    ArtifactName: 'web.zip'
+    ArtifactName: '$(Build.BuildId)'
     publishLocation: 'Container'
